--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
-
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_toast"
@@ -22,12 +20,11 @@
 
     <TextView
         android:id="@+id/show_count"
-        android:layout_width="294dp"
-        android:layout_height="294dp"
+        android:layout_width="599dp"
+        android:layout_height="327dp"
         android:layout_below="@+id/button_toast"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="16dp"
         android:background="#FFFF00"
         android:gravity="center_vertical"
         android:text="@string/count_initial_value"
@@ -35,10 +32,12 @@
         android:textColor="@color/design_default_color_primary"
         android:textSize="120sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.615"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toEndOf="@+id/zero_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.163" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_count"
@@ -67,6 +66,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_toast"
         app:layout_constraintTop_toTopOf="@+id/button_count"
-        app:layout_constraintVertical_bias="0.528" />
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
